--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,54 @@ body {
 }
 
 .about {
+  position: relative;
   background-image: url("/images/about-bg.png");
   background-repeat: no-repeat;
   background-position: right calc(50% + 427px) top 0;
   background-size: 870px 651px;
+}
+
+.about::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, #c92c93, #c92c93);
+  z-index: -1;
+}
+
+.swiper-slide {
+  background-image: linear-gradient(
+      90deg,
+      rgba(0, 0, 0, 0.15),
+      rgba(0, 0, 0, 0.15)
+    ),
+    url("/public/images/case-1.png");
+  background-repeat: no-repeat, no-repeat;
+  background-size: cover, cover;
+}
+
+.swiper-pagination {
+  bottom: 68px !important;
+  left: 60px !important;
+  width: 172px !important;
+}
+.swiper-pagination-bullet {
+  width: 21px !important;
+  height: 21px !important;
+  margin-right: 9px !important;
+  background-color: #fff !important;
+  opacity: 0.3 !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #fff !important;
+  opacity: 1 !important;
+}
+
+.mySwiper {
+  position: absolute !important;
+  @apply left-1/2 -translate-x-1/2;
 }
