--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,14 @@ body {
   border-radius: 2px;
   @apply w-full h-full top-0 left-0 absolute bg-secondBdColour;
 }
+
+.productivity {
+  background-image: linear-gradient(
+      90deg,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url("/images/productivity-bg.png");
+  background-repeat: no-repeat;
+  background-size: auto, 1522px;
+}
