--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ body {
       rgba(0, 0, 0, 0.15),
       rgba(0, 0, 0, 0.15)
     ),
-    url("/public/images/case-1.png");
+    url("/images/case-1.png");
   background-repeat: no-repeat, no-repeat;
   background-size: cover, cover;
 }
@@ -133,4 +133,9 @@ body {
     url("/images/productivity-bg.png");
   background-repeat: no-repeat;
   background-size: auto, 1522px;
+}
+
+.text-stroke {
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #fff;
 }
