--- a/src/index.css
+++ b/src/index.css
@@ -139,3 +139,18 @@ body {
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: #fff;
 }
+
+.footer-stroke::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  bottom: 73px;
+  @apply bg-strokeColour;
+}
+
+.footer-bg {
+  background-image: url("/images/footer-bg.png");
+  background-repeat: no-repeat;
+  background-position: -457px 165px;
+}
