added about & case sections mob styles

--- a/src/index.css
+++ b/src/index.css
@@ -56,21 +56,35 @@ body {
   position: relative;
   background-image: url("/images/about-bg.png");
   background-repeat: no-repeat;
-  background-position: right calc(50% + 427px) top 0;
-  background-size: 870px 651px;
+  background-size: 100% 300px;
   overflow-x: hidden;
 }
 
-.about::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 50%;
-  width: 50vw;
-  height: 100%;
-  background: linear-gradient(90deg, #c92c93, #c92c93);
-  z-index: -1;
-  transform: translateX(100%);
+@media screen and (min-width: 768px) {
+  .about {
+    background-position: right calc(50% + 303px) top 0;
+    background-size: 85%;
+  }
+
+  .about::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 50%;
+    width: 50vw;
+    height: 100%;
+    background: linear-gradient(90deg, #c92c93, #c92c93);
+    z-index: -1;
+    transform: translateX(100%);
+  }
+}
+
+@media screen and (min-width: 1512px) {
+  .about {
+    background-position: right calc(50% + 427px) top 0;
+    background-size: 870px 651px;
+    overflow-x: hidden;
+  }
 }
 
 .swiper-slide {
