--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,19 @@ body {
     ),
     url("/images/productivity-bg.png");
   background-repeat: no-repeat;
-  background-size: auto, 1522px;
+  background-size: auto, 425px;
+}
+
+@media screen and (min-width: 768px) {
+  .productivity {
+    background-size: cover;
+  }
+}
+
+@media screen and (min-width: 1512px) {
+  .productivity {
+    background-size: auto, 1522px;
+  }
 }
 
 .text-stroke {
@@ -192,12 +204,29 @@ body {
   content: "";
   width: 100%;
   height: 1px;
-  bottom: 73px;
+  bottom: 97px;
   @apply bg-strokeColour;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-stroke::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 1px;
+    bottom: 73px;
+    @apply bg-strokeColour;
+  }
 }
 
 .footer-bg {
   background-image: url("/images/footer-bg.png");
   background-repeat: no-repeat;
-  background-position: -457px 165px;
+  background-position: -661px 84px;
+}
+
+@media screen and (min-width: 1512px) {
+  .footer-bg {
+    background-position: -457px 165px;
+  }
 }
